objects/Adhoc_Allowances__c.object
<CustomObject>
    <label>Adhoc_Allowance</label>
    <nameField>
        <displayFormat>ALL-{000000}</displayFormat>
        <label>Adhoc_Allowances Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adhoc Allowances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Adhoc Allowances</relationshipLabel>
        <relationshipName>Adhoc_Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pay Code</description>
        <inlineHelpText>The specific Allowance Pay Code</inlineHelpText>
        <label>Pay Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>tc9_ti__PayCodeMaster__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Allowance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tc9_ti__PayCodeMaster__c</referenceTo>
        <relationshipLabel>Adhoc Allowances</relationshipLabel>
        <relationshipName>Adhoc_Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee_Id__c</fullName>
        <formula>Placement__r.Payee__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity (Units)</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Placement</description>
        <label>Placement</label>
        <referenceTo>ts2__Placement__c</referenceTo>
        <relationshipLabel>Adhoc Allowances</relationshipLabel>
        <relationshipName>Adhoc_Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Timesheet</description>
        <label>Timesheet</label>
        <referenceTo>tc9_ti__Time_Sheet__c</referenceTo>
        <relationshipLabel>Adhoc Allowances</relationshipLabel>
        <relationshipName>Adhoc_Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <description>Entry Date for Allowance</description>
        <inlineHelpText>Date the Allowance is entitled</inlineHelpText>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expiry Date</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective Date</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Status of Allowance</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KMs_Claimed_YTD__c</fullName>
        <label>KMs Claimed YTD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidates_Notes__c</fullName>
        <description>Candidate Notes</description>
        <label>Candidates Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flow_Description__c</fullName>
        <formula>Pay_Code__r.Name  &amp; &quot; ( &quot; &amp; Text ( Candidate_Rate_Incl_Loading__c ) &amp; &quot; ) &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flow Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KM_Year_Start_Date__c</fullName>
        <formula>If( Entry_Date__c &gt;=DATE(YEAR(Entry_Date__c ),7,1),DATE(YEAR(Entry_Date__c),7,1),DATE(YEAR(Entry_Date__c)-1,7,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KM Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generate_Transaction__c</fullName>
        <description>The status of the Transactions, updated by the application automatically.
1 - Timesheet has not been approved
2 - Timesheet Approved and ready to be processed
3 - Timesheet has Transactions created
4 - The process to create Transactions failed, Please check Debug Log</description>
        <inlineHelpText>Please do not edit manually. Definition of numbers are
1 - Timesheet has not been approved
2 - Timesheet Approved and ready to be processed
3 - Timesheet has Transactions created
4 - The process to create Transactions failed, Please check Debug Log</inlineHelpText>
        <label>Generate Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timesheet_Start_Date__c</fullName>
        <formula>Timesheet__r.tc9_ti__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calculated_Expiry_Date__c</fullName>
        <formula>If ( NOT ( ISBLANK ( Expiry_Date__c ) ) , Expiry_Date__c ,  DATE(2099,12,31) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Candidate_Rate_Incl_Loading__c</fullName>
        <label>Candidate Rate (Incl Loading)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Placement</fullName>
        <active>true</active>
        <description>Placement Specific Adhoc Allowances</description>
        <label>Placement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Timesheet</fullName>
        <active>true</active>
        <description>Timesheet Specific Adhoc Allowances</description>
        <label>Timesheet</label>
    </recordTypes>
</CustomObject>